<resources>

    <string name="app_name">Women Safety App</string>
    <string name="action_settings">Settings</string>

    //lines to be added are below
    <string name="login">LOGIN</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_user">Welcome User</string>
    <string name="introduction">The Women Safety app is designed to ensure that women stay safe always. The Women Safety app is the easiest to use. The user just needs to shake their smartphone to send an SOS text to the registered numbers. It also works without an internet connection. </string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name">Name</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home">Home</string>
    <string name="nearby_police">Nearby Police</string>
    <string name="account_settings">Account Settings</string>
    <string name="add_emergency_contacts">Add Emergency Contacts</string>
    <string name="logout">Logout</string>
    <string name="about">Women Safety App is developed for the safety of women. Women’s safety is a big concern which has been the most important topic till date. Women safety matters a lot whether at home, outside the home or working place. Few crimes against ladies particularly rape cases were terribly dread and fearful. Most of the women of various ages, till this day are being subjected to violence, domestic abuse, and rape. As ladies ought to travel late night generally, it’s necessary to remain alert and safe. This is user-friendly application that can be accessed by anyone who has installed it in their smart phones. My intention is to provide you with fastest and simplest way to contact your nearest help. In this system user needs to feed five contact numbers, in case of emergency on shaking the phone, the system sends SMS on one of the numbers feeded into the system with the location.</string>
    <string name="about_1">Here, we introduce an android app that ensures the safety of
women. It reduces the risk and helps us in need by identifying
the location of person who is in danger.
The key features of our app are as follows:  </string>
    <string name="features">
       <br> 1) Initially, we have to enter the five contact numbers of
police, family members and friends in to the
        application.</br>
        <br>2) While travelling, run the application and shake the phone.
        </br>
        <br>3) As soon as phone is shaked, it sends the message containing location URL of the
victim to all the contact numbers.</br>
</string>
    <string name="hometips1">
        <li> DO NOT OPEN TO STRANGERS.</li>
        <li>HAVE GOOD DOOR LOCKS, CLOSE DOORS AND WINDOWS.</li>
        DRAW CURTAINS AND SHUT BLINDS AT NIGHT.
    </string>
    <string name="shop">
        <li> PARK IN WELL-LIT AREAS CLOSE TO DESTINATION.</li>
        <li> DO NOT PUT YOUR PURSE IN SHOPPING CART.</li>
    </string>
    <string name="travel">
        <li> TELL YOUR FAMILY MEMBERS ABOUT WHERE YOU ARE GOING.</li>
        <li> KEEP YOUR VALUABLES WITH YOU.</li> DO NOT TRUST PEOPLE TOO QUICKLY
    </string>
    <string name="alone">
        <li> AVOID ISOLATED AREAS.</li>
        <li> BE AWARE OF THE SURROUNDINGS.</li> STICK TO THE ROUTES YOU KNOW WELL.
    </string>
    <string name="car">
        <li> ALWAYS LOCK DOORS AND WINDOWS.</li>
        <li> AVOID POORLY LIT PARKING AREAS.</li> HOLDING KEYS IN YOUR HANDS WHEN APPROACHING THE CAR.
    </string>
</resources>