<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
                <item
                    android:id="@+id/account_settings"
                    android:icon="@android:drawable/ic_menu_manage"
                    android:title="@string/account_settings" />
                <item
                    android:id="@+id/contacts"
                    android:icon="@android:drawable/ic_dialog_alert"
                    android:title="@string/add_emergency_contacts" />
                <item
                    android:id="@+id/logout"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/logout" />
                <item
                    android:id="@+id/aboutconstraint"
                    android:icon="@android:drawable/ic_menu_help"
                    android:title="About" />
            </menu>

