<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raghav.sos.LoginActivity"
    android:orientation="vertical"
    android:id="@+id/container"
    android:background="#70EF8989"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="142dp"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/splash" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="191dp"
            android:layout_height="57dp"
            android:layout_marginTop="50dp"
            android:background="#655E5E"
            android:drawableLeft="@drawable/username"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:paddingLeft="2dp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="190dp"
            android:layout_height="53dp"
            android:layout_marginTop="30dp"
            android:background="#655E5E"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="197dp"
        android:layout_height="58dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="#0622AF"
        android:text="@string/login"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#101010"
            android:textSize="15dp"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="91dp"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textSize="17dp"
            android:text="@string/register"
            android:textColor="#0622AF"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textview_forgot"
        android:layout_width="196dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:textSize="17dp"
        android:textAlignment="center"/>
</LinearLayout>