<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F3ECEC"
    android:backgroundTint="#F3ECEC"
    tools:context=".About">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="512dp"
                android:background="#F3ECEC"
                android:backgroundTint="#F3ECEC"
                android:text="@string/about"
                android:textColor="#090808"
                android:textSize="20dp"
                android:textStyle="normal"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="100dp" />

            <TextView
                android:id="@+id/about1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_1"
                android:textColor="#090808"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/features"
                android:textColor="#090808"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="10dp"
                android:text="Developed by"
                android:textColor="#090808"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="App is developed by Anshika Mishra"
                android:textSize="20dp"/>
        </LinearLayout>
    </ScrollView>
